Fixed merge conflicts via rebase. Fixed student casing issues breaking functionality. Closes #1.

--- a/src/main/webapp/scripts/app/entities/student/student-detail.html
+++ b/src/main/webapp/scripts/app/entities/student/student-detail.html
@@ -12,18 +12,18 @@
             <tbody>
                 <tr>
                     <td>
-                        <span translate="studentmanagementApp.student.FirstName">FirstName</span>
+                        <span translate="studentmanagementApp.student.firstName">FirstName</span>
                     </td>
                     <td>
-                        <input type="text" class="input-sm form-control" value="{{student.FirstName}}" readonly>
+                        <input type="text" class="input-sm form-control" value="{{student.firstName}}" readonly>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <span translate="studentmanagementApp.student.LastName">LastName</span>
+                        <span translate="studentmanagementApp.student.lastName">LastName</span>
                     </td>
                     <td>
-                        <input type="text" class="input-sm form-control" value="{{student.LastName}}" readonly>
+                        <input type="text" class="input-sm form-control" value="{{student.lastName}}" readonly>
                     </td>
                 </tr>
             </tbody>
